# spider-esp32

./: .gitignore  Makefile  README.md  sdkconfig  start.sh
main/: CMakeLists.txt  spider.c  spider.cpp
server/: CMakeLists.txt  Makefile  package.json
server/src/: CMakeLists.txt  server.cc
